# fastapi-lambda

./: .dockerignore  .envrc  .gitignore  .npmrc  Dockerfile  README.md  cdk.json  cdk.py  docker-compose.yml  event.json  lambda.py  package.json  pyproject.toml  requirements.txt  tasks.py
fastapi_lambda/: app.py
fastapi_lambda/cdk/: stacks.py
tests/: test_fastapi_lambda.py
