[tool.poetry]
name = "fastapi-lambda"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.62.0"
mangum = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
uvicorn = "^0.12.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
